2004-05-03  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/DetDescendantReport.py: Convert to db interface.
	* src/plugins/DetAncestralReport.py: Translate string.
	* src/plugins/FtmStyleDescendants.py: Convert to db interface.

2004-05-02  Don Allingham  <donaldallingham@users.sourceforge.net>
	* src/DbPrompter.py:  2.4 filechooser
	* src/gramps_main.py:  2.4 filechooser
	* src/ReadXML.py:  2.4 filechooser
	* src/Pluginsd.py: tooltip deprecation fix

2004-05-01  Don Allingham  <dona@localhost.localdomain>
	* src/gramps.glade: rearranged filter apply
	* src/gramps.py: update to gtk.main()
	* src/gramps_main.py: goto active person after model built

2004-04-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GenericFilter.py: Add a generic filter that can take a
	parameter
	* src/PeopleModel.py: Support for top level visibility
	* src/gramps.glade: clean up filtering widgets
	* src/gramps_main.py: build basic filters

2004-04-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DbPrompter.py: remove unused functions
	* src/DisplayModels.py: filtering support
	* src/GenericFilter.py: filtering support
	* src/PeopleModel.py: support for filtering
	* src/PeopleView.py: support for filtering
	* src/RelLib.py: filtering support
	* src/Utils.py: filtering support
	* src/gramps.glade: remove invert for filters
	* src/gramps_main.py: filtering support

2004-04-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/IndivComplete.py: Convert to db interface.
	* src/plugins/DescendReport.py: Convert to db interface.
	* src/plugins/DetAncestralReport.py: Convert to db interface.

2004-04-24  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/RTFDoc.py: Typo.
	* src/Utils.py (get_xpm_image): Add function.
	* src/plugins/AncestorReport.py (get_xpm_image): Remove 
	function, import it from Utils.py instead. 
	* src/plugins/Ancestors.py (get_xpm_image): Remove function;
	Bring up to the database interface. 
	* src/gramps.glade: Menu improvements.
