@@ -2,6 +2,7 @@
 	* src/plugins/DetDescendantReport.py: Convert to db interface.
 	* src/plugins/DetAncestralReport.py: Translate string.
 	* src/plugins/FtmStyleDescendants.py: Convert to db interface.
+	* src/plugins/FamilyGroup.py: Convert to db interface.
 
 2004-05-02  Don Allingham  <donaldallingham@users.sourceforge.net>
 	* src/DbPrompter.py:  2.4 filechooser
